test/Neg/termina/resource_class/procedure_extra_const_params.fin
interface TMChannelInterface {
    procedure get_tm_sent_packets(&mut self, packets : &mut u32);
    procedure send_packet(&mut self);
};

resource class TMChannel provides TMChannelInterface {

  tm_sent_packets : u32;

  procedure get_tm_sent_packets<const N : usize>(&mut self, packets : &mut u32) {
    *packets = self->tm_sent_packets;
    return;
  }

  procedure send_packet(&mut self, input : u32) {
    return;
  }

};